# oswald

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SETUP.md  TODO.md  config.example.yaml  conftest.py  eslint.config.js  oswald.yml.example  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
dbt_project/: dbt_project.yml  profiles.example.yml
dbt_project/macros/: generate_schema_name.sql
docs/: ANALYTICAL_ENGINEERING_WORKFLOW.md  ARCHITECTURE.md  ASSUMPTIONS.md  CLI.md  MCP.md  RELEASING.md  ROADMAP.md  RUNTIMES.md  SECURITY_MODEL.md  minimal-permissions.md
examples/dbt-project/: README.md  dbt_project.yml  profiles.yml
examples/fixtures/: mock-eda-results.json  snowflake-schema.json
examples/tickets/: sample-retention-ticket.md
pack/: .sqlfluff  .sqlfluffignore  CLAUDE.md  intake_spec.md
pack/prompts/: eda.md  modeling.md
scripts/: publish.sh
src/: index.ts
src/cli/: index.ts
src/core/: index.ts
src/oswald/: __init__.py  cli.py
src/runtimes/: commands.ts  index.ts
src/tentacles/: base.ts  index.ts  registry.ts
src/tools/: index.ts
tests/: conftest.py  test_binding_resolution.py  test_cli_init.py  test_cli_run.py  test_config_schema.py  test_dbt_mcp_local.py  test_deny_backstop.py  test_eda_profiling.py  test_egress_allowlist.py  test_git_identity.py  test_intake_spec.py  test_mcp_probe.py  test_minimal_permissions_doc.py  test_pack_artifacts.py  test_pipeline_stages.py  test_plugin_structure.py  test_rule_of_two.py  test_tool_scoping.py  test_validate_binding.py  test_validate_errors.py  test_writeback_guard.py
(+156 files in other folders)
